# wyoming-universal-stt

./: .dockerignore  .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
examples/: streaming_client.py
script/: format  lint  run
tests/: test_faster_whisper.py
wyoming_universal_stt/: __main__.py  config.yaml  handler.py
wyoming_universal_stt/backends/: __init__.py  base.py  factory.py  faster_whisper.py  mlx_whisper.py  openai_whisper_api.py
